name:                kvsstcp
version:             0
synopsis:            Key value storage server and client
-- license:          ?
author:              Dylan Simon
maintainer:          dsimon@flatironinstitute.org
category:            Network, Distributed Computing
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/simonsfoundation/kvsstcp

library
  exposed-modules:
    Network.KVS.Types
    Network.KVS.Client
    Network.KVS.Server
  other-modules:
    Network.KVS.Internal
  hs-source-dirs: hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >=4.9 && <5,
    bytestring >= 0.10.2,
    containers,
    network,
    unix
    -- unix is actually optional

executable kvsclient
  main-is: hs/kvsclient.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    bytestring,
    network,
    kvsstcp

executable kvsserver
  main-is: hs/kvsserver.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    network,
    kvsstcp
